person service tests added

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,12 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
 
+api:
+  default-values:
+    pagination:
+      rows: 10
+      page: 0
+
 ---
 
 # 'test' profile only
